--- a/Lowkey/app/build.gradle
+++ b/Lowkey/app/build.gradle
@@ -29,14 +29,14 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     //added
-    implementation 'com.google.android.gms:play-services:11.8.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-    implementation 'com.google.android.gms:play-services-location:7.0.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.jaeger.statusbarutil:library:1.4.0'
     //3rd lib
     implementation 'com.github.florent37:materialtextfield:1.0.7'
