--- a/Lowkey/app/build.gradle
+++ b/Lowkey/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
 
+
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-vector-drawable:28.0.0'
     implementation 'com.android.volley:volley:1.1.1'
@@ -38,6 +39,10 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.jaeger.statusbarutil:library:1.4.0'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.wangjiegulu:rfab:2.0.0'
+
     //3rd lib
     implementation 'com.github.florent37:materialtextfield:1.0.7'
 }
