--- a/Lowkey/app/src/main/AndroidManifest.xml
+++ b/Lowkey/app/src/main/AndroidManifest.xml
@@ -54,6 +54,18 @@
         <activity
             android:name=".TestMapActivity"
             android:label="@string/title_activity_test_map"></activity>
+
+        <provider
+            android:name=".utils.GenericFileProvider"
+            android:authorities="${applicationId}.my.package.name.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths"/>
+        </provider>
+
+
     </application>
 
 </manifest>
