--- a/Lowkey/app/build.gradle
+++ b/Lowkey/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.jaeger.statusbarutil:library:1.4.0'
     implementation 'com.getbase:floatingactionbutton:1.10.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'org.ocpsoft.prettytime:prettytime:4.0.1.Final'
     implementation 'com.github.wangjiegulu:rfab:2.0.0'
 
     //3rd lib
