--- a/Lowkey/app/src/main/AndroidManifest.xml
+++ b/Lowkey/app/src/main/AndroidManifest.xml
@@ -25,9 +25,8 @@
         <activity
             android:name=".main.fragments.MainActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTop"/>
-
-        <activity android:name=".auth.EntryActivity" >
+            android:launchMode="singleTop" />
+        <activity android:name=".auth.EntryActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -54,7 +53,7 @@
 
         <activity
             android:name=".TestMapActivity"
-            android:label="@string/title_activity_test_map"></activity>
+            android:label="@string/title_activity_test_map" />
 
         <provider
             android:name=".utils.GenericFileProvider"
@@ -63,10 +62,10 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths"/>
+                android:resource="@xml/provider_paths" />
         </provider>
 
-
+        <activity android:name=".main.fragments.issue.ComentsActivity"></activity>
     </application>
 
 </manifest>
